--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<meta name="viewport" content="width=1000">
 
 		<link href="css/index.css" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Crimson+Text" /> 
 
 		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 		<script src="js/titleScript.js"></script>
@@ -15,6 +14,8 @@
 		<script type="text/javascript" src="js/index.js"></script>
 
 		<script type="text/javascript" src="js/fadeIn.js"></script>
+
+
 
 
 
@@ -45,7 +46,7 @@
 
 
 		<header>
-			<!-- <div id="navWrap"> -->
+			
 				<div id="nav">
 					<ul>
 						<li><a href="#projects" class="smoothScroll">WORK</a></li>
@@ -55,21 +56,18 @@
 
 					</ul>
 				</div>
-			<!-- </div> -->
+
+			
 		</header>
-
-
-<!-- 		<div class="titleHeader">
-			<object width="100%" height="auto" id="logo" data="svg/name.svg" type="image/svg+xml">
-			</object>
-		</div> -->
 
 
 
 		<div id="svgTitle">
-				<object width="100%" id="logo" data="svg/name.svg" type="image/svg+xml">
-			</object>		
-		</div>
+			<object width="100%" id="nameSvg" data="svg/u.svg" type="image/svg+xml">
+			</object>	
+		</div>	
+	
+		
 
 		<a name="projects"></a>
 
@@ -175,15 +173,15 @@
 		</div>
 
 
-
-		<div class="projectsDisplay">
-			<div id='projectLink'>Coming Soon</div>
-			
-			<a href="#"><div id="imageScreen"></div></a>
-			<div id="projectLink">Monica Wilcox Portfolio Website</div>
-			<div id='webLink'>Website design for Monica Wilcox</div>
-			<div id='webLink'>
-				<a href="#">+ visit website</a>
+		<div id="fadeInProjects">
+			<div class="projectsDisplay">
+				<!-- <a href="#"><div id="imageScreen"></div></a> -->
+				<div id="portImg"><a href="#"><img width="25%" src="images/port.png"></a></div>
+				<div id="projectLink">Monica Wilcox Portfolio Website</div>
+				<div id='webLink'>Website design for Monica Wilcox</div>
+				<div id='webLink'>
+					<a href="#">+ visit website</a>
+				</div>
 			</div>
 		</div>
 
@@ -191,6 +189,8 @@
 		<a name="about"></a>
 
 		<div id="aboutFrame"></div>
+
+
 
 		<div id="svgAboutHeader">
 
@@ -250,11 +250,9 @@
 
 
 		<div class="aboutDisplay">
-
-
 			<div class="aboutMe" id="fadeInAbout">
 				<p id="aboutDescription">
-					I am a designer and developer, currently enrolled at the University of Kentucky in the Computer Science department. I hold a degree in Architecture from Miami University. When I am working on a project, I like to focus on the user experience and design. I care about the type and quality of my work. If I am not programming, you can find me writing and sketching in my notebook, or outside playing with my awesome dog, Charlie.
+					I am a designer and developer, currently enrolled at the University of Kentucky in the Computer Science department. I hold a degree in Architecture from Miami University. When I am working on a project, I like to focus on the user experience and design. I care about the type and quality of my work. If I am not programming, you can find me writing and sketching in my notebook.
 				</p>			
 			</div>
 			
@@ -336,8 +334,7 @@
 
 				<div id="fadeInE1">
 					<p id="workTitle">Software Development Intern</p>
-					<p id="workPlace">ArchVision<a id="icon" href="https://archvision.com/" target="_blank"><img id="icon" src="images/arrowIcon.png" height="20"
-					width="20"></a></p>
+					<p id="workPlace">ArchVision<a id="icon" href="https://archvision.com/" target="_blank"><object id="iconSvg" data="svg/arrowIcon.svg" type="image/svg+xml"></object></a></p>
 
 					<p id="date">January 2015 - Present</p>
 					<p id="location">Lexington, KY</p>
@@ -357,8 +354,7 @@
 				
 				<div id="fadeInE2">
 					<p id="workTitle">Coding Coach</p>
-					<p id="workPlace">Awesome, Inc.<a id="icon" href="http://www.awesomeinc.org/" target="_blank"><img id="icon" src="images/arrowIcon.png" height="20"
-					width="20"></a></p>
+					<p id="workPlace">Awesome, Inc.<a id="icon" href="https://archvision.com/" target="_blank"><object id="iconSvg" data="svg/arrowIcon.svg" type="image/svg+xml"></object></a></p>
 
 					<p id="date">September 2015 - Present</p>
 					<p id="location">Lexington, KY</p>
@@ -378,8 +374,7 @@
 
 				<div id="fadeInE3">
 					<p id="workTitle">Architectural Intern</p>
-					<p id="workPlace">Hastings + Chivetta Architects<a id="icon" href="http://www.hastingschivetta.com/" target="_blank"><img id="icon" src="images/arrowIcon.png" height="20"
-					width="20"></a></p>
+					<p id="workPlace">Hastings + Chivetta Architects<a id="icon" href="https://archvision.com/" target="_blank"><object id="iconSvg" data="svg/arrowIcon.svg" type="image/svg+xml"></object></a></p>
 
 					<p id="date">July 2010 - December 2012</p>
 					<p id="location">Saint Louis, MO</p>
@@ -424,16 +419,20 @@
 
 		<a name="contact"></a>
 			
-		<div id="fadeInContact">	
-			<div class="contactBlock">
-				<p id="contactInfo">859.351.2914</p>
-				<p id="contactInfo"><a href="mailto:ecwi232@g.uky.edu">erika.wilcox@uky.edu</a>
-				<br>
-				<br>
-				<a id="contactInfo" href="https://www.linkedin.com/in/wilcoxec" target="_blank">https://www.linkedin.com/in/wilcoxec</a></p>
-				<br>
-			</div>
-		</div>	
+		<div id="fadeInContact">  
+            <div class="contactBlock">
+              <p id="contactInfo">859.351.2914</p>
+              <p id="contactInfo"><a href="mailto:ecwi232@g.uky.edu">erika.wilcox@uky.edu</a>
+              <br>
+              <br>
+              <a id="contactButtons" href="https://www.linkedin.com/in/wilcoxec" target="_blank"><img height="50px" src="images/inIcon.png" onmouseover="this.src='images/inHover.png'" onmouseout="this.src='images/inIcon.png'"/></a>
+              <a id="contactButtons" href="https://github.com/wilcoxec" target="_blank"><img height="50px" src="images/gitIcon.png" onmouseover="this.src='images/gitHover.png'" onmouseout="this.src='images/gitIcon.png'"/></a>
+              </p>
+              <br>
+              <p id="contactInfo"><a href="#top">back to top</a></p>
+
+            </div>
+         </div> 
 
 		<div class="copyRight">
 			<p>&copy; COPYRIGHT 2015 ERIKA WILCOX</p>
